; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_set_waveformat.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_set_waveformat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_6__, i32, %struct.TYPE_7__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32, i32, i32, i32, i32 }
%struct.wasapi_sample_fmt = type { i32, i32, i32 }
%struct.mp_chmap = type { i32 }

@WAVE_FORMAT_EXTENSIBLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, %struct.wasapi_sample_fmt*, i32, %struct.mp_chmap*)* @set_waveformat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_waveformat(%struct.TYPE_8__* %0, %struct.wasapi_sample_fmt* %1, i32 %2, %struct.mp_chmap* %3) #0 {
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca %struct.wasapi_sample_fmt*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.mp_chmap*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %5, align 8
  store %struct.wasapi_sample_fmt* %1, %struct.wasapi_sample_fmt** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.mp_chmap* %3, %struct.mp_chmap** %8, align 8
  %9 = load i32, i32* @WAVE_FORMAT_EXTENSIBLE, align 4
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 3
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 4
  store i32 %9, i32* %12, align 4
  %13 = load %struct.mp_chmap*, %struct.mp_chmap** %8, align 8
  %14 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 3
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 3
  store i32 %15, i32* %18, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 3
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 2
  store i32 %19, i32* %22, align 4
  %23 = load %struct.wasapi_sample_fmt*, %struct.wasapi_sample_fmt** %6, align 8
  %24 = getelementptr inbounds %struct.wasapi_sample_fmt, %struct.wasapi_sample_fmt* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 3
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 1
  store i32 %25, i32* %28, align 4
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 3
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  store i32 28, i32* %31, align 4
  %32 = load %struct.wasapi_sample_fmt*, %struct.wasapi_sample_fmt** %6, align 8
  %33 = getelementptr inbounds %struct.wasapi_sample_fmt, %struct.wasapi_sample_fmt* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32* @format_to_subtype(i32 %34)
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %37, i32 0, i32 2
  store i32 %36, i32* %38, align 4
  %39 = load %struct.wasapi_sample_fmt*, %struct.wasapi_sample_fmt** %6, align 8
  %40 = getelementptr inbounds %struct.wasapi_sample_fmt, %struct.wasapi_sample_fmt* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 0
  store i32 %41, i32* %44, align 4
  %45 = load %struct.mp_chmap*, %struct.mp_chmap** %8, align 8
  %46 = call i32 @mp_chmap_to_waveext(%struct.mp_chmap* %45)
  %47 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %47, i32 0, i32 0
  store i32 %46, i32* %48, align 4
  %49 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %50 = call i32 @update_waveformat_datarate(%struct.TYPE_8__* %49)
  ret void
}

declare dso_local i32* @format_to_subtype(i32) #1

declare dso_local i32 @mp_chmap_to_waveext(%struct.mp_chmap*) #1

declare dso_local i32 @update_waveformat_datarate(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
